add error handling to deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,19 @@ name: Deploy to Render
 on:
   push:
     branches:
-      - main
+    - main
   workflow_dispatch:
+
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Render Deploy Hook
-        run: |
-          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+    - name: Trigger Render Deploy Hook
+      if: ${{ secrets.RENDER_DEPLOY_HOOK != '' }}
+      run: |
+        curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
+    - name: Skip deploy - no hook configured
+      if: ${{ secrets.RENDER_DEPLOY_HOOK == '' }}
+      run: |
+        echo "RENDER_DEPLOY_HOOK secret not configured, skipping deploy"
