--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -28,5 +28,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/blm-campsites.json
-          git commit -m 'Update BLM campsites JSON [skip ci]' || echo "No changes to commit"
+          git commit -m 'Update BLM campsites JSON' || echo "No changes to commit"
           git push
