--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,31 +2,32 @@ name: Scrape BLM Campsites
 
 on:
   schedule:
-    - cron: '0 2 */14 * *'
+  - cron: '0 2 * * 0'
   workflow_dispatch:
+
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Use Node version from .nvmrc
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
+    - name: Use Node version from .nvmrc
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: '.nvmrc'
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Run spider and update JSON
-        run: npx ts-node src/cron.ts
+    - name: Run spider and update JSON
+      run: npx ts-node src/cron.ts
 
-      - name: Commit and push JSON data
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add data/blm-campsites.json
-          git commit -m 'Update BLM campsites JSON' || echo "No changes to commit"
-          git push
+    - name: Commit and push JSON data
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add data/blm-campsites.json
+        git commit -m 'Update BLM campsites JSON' || echo "No changes to commit"
+        git push
