--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,8 +2,9 @@ name: Scrape BLM Campsites
 
 on:
   schedule:
-    - cron: '0 2 */14 * *'
+  - cron: '0 2 * * 0'
   workflow_dispatch:
+
 
 jobs:
   scrape:
@@ -28,5 +29,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/blm-campsites.json
-          git commit -m 'Update BLM campsites JSON [skip ci]' || echo "No changes to commit"
+          git commit -m 'Update BLM campsites JSON' || echo "No changes to commit"
           git push
