--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,9 +25,12 @@ jobs:
         run: npx ts-node src/cron.ts
 
       - name: Commit and push JSON data
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/blm-campsites.json
           git commit -m 'Update BLM campsites JSON' || echo "No changes to commit"
           git push
+
