--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -20,6 +20,7 @@ jobs:
       p95_latency: ${{ steps.extract-artillery.outputs.p95_latency }}
       p99_latency: ${{ steps.extract-artillery.outputs.p99_latency }}
       max_latency: ${{ steps.extract-artillery.outputs.max_latency }}
+      response_size: ${{ steps.extract-artillery.outputs.response_size }}
       requests_per_second: ${{ steps.extract-artillery.outputs.requests_per_second }}
       total_requests: ${{ steps.extract-artillery.outputs.total_requests }}
       errors: ${{ steps.extract-artillery.outputs.errors }}
@@ -70,6 +71,7 @@ jobs:
           p95_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].p95 // empty' artillery-report.json)
           p99_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].p99 // empty' artillery-report.json)
           max_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].max // empty' artillery-report.json)
+          response_size=$(jq -r '.aggregate["summaries"]["http.response_size"].mean // empty' artillery-report.json)
           requests_per_second=$(jq -r '.aggregate["rates"]["http.requests"] // empty' artillery-report.json)
           total_requests=$(jq -r '.aggregate["counters"]["http.requests"] // 0' artillery-report.json)
           errors=$(jq -r '.aggregate["counters"]["http.requests_failed"] // 0' artillery-report.json)
@@ -85,6 +87,7 @@ jobs:
           echo "p95_latency=$p95_latency" >> $GITHUB_OUTPUT
           echo "p99_latency=$p99_latency" >> $GITHUB_OUTPUT
           echo "max_latency=$max_latency" >> $GITHUB_OUTPUT
+          echo "response_size=$response_size" >> $GITHUB_OUTPUT
           echo "requests_per_second=$requests_per_second" >> $GITHUB_OUTPUT
           echo "total_requests=$total_requests" >> $GITHUB_OUTPUT
           echo "errors=$errors" >> $GITHUB_OUTPUT
@@ -99,6 +102,7 @@ jobs:
           p95=${{ steps.extract-artillery.outputs.p95_latency }}
           p99=${{ steps.extract-artillery.outputs.p99_latency }}
           max=${{ steps.extract-artillery.outputs.max_latency }}
+          response_size=${{ steps.extract-artillery.outputs.response_size }}
           rps=${{ steps.extract-artillery.outputs.requests_per_second }}
           errors=${{ steps.extract-artillery.outputs.errors }}
           total=${{ steps.extract-artillery.outputs.total_requests }}
@@ -124,6 +128,13 @@ jobs:
             else echo "High"; fi
           }
 
+          response_size_status() {
+            if (( $(echo "$response_size < 1000" | bc -l) )); then echo "Outstanding";
+            elif (( $(echo "$response_size < 5000" | bc -l) )); then echo "Good";
+            elif (( $(echo "$response_size < 10000" | bc -l) )); then echo "Fair";
+            else echo "Needs Improvement"; fi
+          }
+
           rps_status() {
             if (( $(echo "$rps >= 20" | bc -l) )); then echo "Excellent";
             elif (( $(echo "$rps >= 10" | bc -l) )); then echo "Good";
@@ -142,6 +153,7 @@ jobs:
           echo "p95_status=$(latency_status $p95)" >> $GITHUB_OUTPUT
           echo "p99_status=$(latency_status $p99)" >> $GITHUB_OUTPUT
           echo "max_status=$(latency_status $max)" >> $GITHUB_OUTPUT
+          echo "response_size_status=$(response_size_status $response_size)" >> $GITHUB_OUTPUT
           echo "requests_status=$(requests_status)" >> $GITHUB_OUTPUT
           echo "errors_status=$(errors_status)" >> $GITHUB_OUTPUT
           echo "rps_status=$(rps_status)" >> $GITHUB_OUTPUT
@@ -162,6 +174,7 @@ jobs:
             | p95 Latency          | ${{ steps.extract-artillery.outputs.p95_latency }} ms    | ${{ steps.backend-status.outputs.p95_status }} |
             | p99 Latency          | ${{ steps.extract-artillery.outputs.p99_latency }} ms    | ${{ steps.backend-status.outputs.p99_status }} |
             | Max Latency          | ${{ steps.extract-artillery.outputs.max_latency }} ms    | ${{ steps.backend-status.outputs.max_status }} |
+            | Response Size        | ${{ steps.extract-artillery.outputs.response_size }} bytes | ${{ steps.backend-status.outputs.response_size_status }} |
             | Requests per Second  | ${{ steps.extract-artillery.outputs.requests_per_second }} | ${{ steps.backend-status.outputs.rps_status }} |
             | Total Requests       | ${{ steps.extract-artillery.outputs.total_requests }}     | ${{ steps.backend-status.outputs.requests_status }} |
             | Failures             | ${{ steps.extract-artillery.outputs.errors }}             | ${{ steps.backend-status.outputs.errors_status }} |
