--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -21,7 +21,6 @@ jobs:
       p99_latency: ${{ steps.extract-artillery.outputs.p99_latency }}
       max_latency: ${{ steps.extract-artillery.outputs.max_latency }}
       response_size: ${{ steps.extract-artillery.outputs.response_size }}
-      requests_per_second: ${{ steps.extract-artillery.outputs.requests_per_second }}
       total_requests: ${{ steps.extract-artillery.outputs.total_requests }}
       errors: ${{ steps.extract-artillery.outputs.errors }}
       error_rate: ${{ steps.extract-artillery.outputs.error_rate }}
@@ -74,8 +73,8 @@ jobs:
           p95_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].p95 // empty' artillery-report.json)
           p99_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].p99 // empty' artillery-report.json)
           max_latency=$(jq -r '.aggregate["summaries"]["http.response_time"].max // empty' artillery-report.json)
-          response_size=$(jq -r '.aggregate["summaries"]["http.response_size"].mean // empty' artillery-report.json)
-          requests_per_second=$(jq -r '.aggregate["rates"]["http.requests"] // empty' artillery-report.json)
+          downloaded_bytes=$(jq -r '.aggregate.counters["http.downloaded_bytes"] // 0' artillery-report.json)
+          http_requests=$(jq -r '.aggregate.counters["http.requests"] // 1' artillery-report.json)
           total_requests=$(jq -r '.aggregate["counters"]["http.requests"] // 0' artillery-report.json)
           errors=$(jq -r '.aggregate["counters"]["http.requests_failed"] // 0' artillery-report.json)
           if [ "$total_requests" -gt 0 ]; then
@@ -90,8 +89,7 @@ jobs:
           echo "p95_latency=$p95_latency" >> $GITHUB_OUTPUT
           echo "p99_latency=$p99_latency" >> $GITHUB_OUTPUT
           echo "max_latency=$max_latency" >> $GITHUB_OUTPUT
-          echo "response_size=$response_size" >> $GITHUB_OUTPUT
-          echo "requests_per_second=$requests_per_second" >> $GITHUB_OUTPUT
+          echo "response_size=$((downloaded_bytes / http_requests))" >> $GITHUB_OUTPUT
           echo "total_requests=$total_requests" >> $GITHUB_OUTPUT
           echo "errors=$errors" >> $GITHUB_OUTPUT
           echo "error_rate=$error_rate" >> $GITHUB_OUTPUT
@@ -132,10 +130,15 @@ jobs:
           }
 
           response_size_status() {
-            if (( $(echo "$response_size < 1000" | bc -l) )); then echo "Outstanding";
-            elif (( $(echo "$response_size < 5000" | bc -l) )); then echo "Good";
-            elif (( $(echo "$response_size < 10000" | bc -l) )); then echo "Fair";
-            else echo "Needs Improvement"; fi
+            if (( response_size < 2000 )); then
+              response_size_status="Excellent"
+            elif (( response_size < 5000 )); then
+              response_size_status="Acceptable"
+            elif (( response_size < 10000 )); then
+              response_size_status="Large"
+            else
+              response_size_status="Excessive"
+            fi
           }
 
           rps_status() {
@@ -178,7 +181,6 @@ jobs:
             | p99 Latency          | ${{ steps.extract-artillery.outputs.p99_latency }} ms    | ${{ steps.backend-status.outputs.p99_status }} |
             | Max Latency          | ${{ steps.extract-artillery.outputs.max_latency }} ms    | ${{ steps.backend-status.outputs.max_status }} |
             | Response Size        | ${{ steps.extract-artillery.outputs.response_size }} bytes | ${{ steps.backend-status.outputs.response_size_status }} |
-            | Requests per Second  | ${{ steps.extract-artillery.outputs.requests_per_second }} | ${{ steps.backend-status.outputs.rps_status }} |
             | Total Requests       | ${{ steps.extract-artillery.outputs.total_requests }}     | ${{ steps.backend-status.outputs.requests_status }} |
             | Failures             | ${{ steps.extract-artillery.outputs.errors }}             | ${{ steps.backend-status.outputs.errors_status }} |
             | Error Rate           | ${{ steps.extract-artillery.outputs.error_rate }}%        | ${{ steps.backend-status.outputs.error_rate_status }} |
