--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -23,6 +23,13 @@ jobs:
 
       - name: Run spider and update JSON
         run: npx ts-node src/cron.ts
+      
+      - name: Validate scraped JSON
+        run: |
+          if ! jq -e '. | length > 0' data/blm-campsites.json; then
+            echo "Scraped data is empty or invalid. Aborting commit."
+            exit 1
+          fi
 
       - name: Commit and push JSON data
         env:
