--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "node20",
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
