--- a/package.json
+++ b/package.json
@@ -2,45 +2,31 @@
   "name": "blm-spider",
   "version": "1.0.0",
   "description": "Scrape BLM dispersed campsite data by crawling their official site (starting at search results), parsing each campsite detail page, and saving structured data to JSON.",
-  "main": "dist/api/index.js",
+  "main": "dist/api/resources.js",
   "scripts": {
     "build": "tsc",
-    "postbuild": "mkdir -p dist/api/docs && cp src/api/docs/openapi.yaml dist/api/docs/openapi.yaml",
-    "start": "node dist/api/index.js",
+    "postbuild": "mkdir -p dist/api && cp src/api/*.js src/api/*.graphql dist/api/",
+    "start": "harperdb run .",
     "cron": "node dist/core/jobs/cron.js",
-    "dev": "nodemon --watch src --exec ts-node src/api/index.ts",
     "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@turf/turf": "^7.2.0",
-    "@types/express": "^5.0.3",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
     "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
     "node-cron": "^4.2.1",
     "p-limit": "^6.2.0",
-    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
     "@types/node": "^24.1.0",
-    "@types/supertest": "^6.0.3",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/yamljs": "^0.2.34",
     "@vitest/ui": "^3.2.4",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
